--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Piotr Kmieć",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
