--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "start-dev": "nodemon app.js"
   },
   "author": "Piotr Kmieć",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
+    "hbs": "^4.2.0",
     "mysql2": "^3.1.0",
     "serve-favicon": "^2.5.0"
   },
