--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mysql2": "^3.1.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
