--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mysql2": "^3.1.0",
+    "node": "^19.8.1",
     "serve-favicon": "^2.5.0",
     "socket.io": "^4.6.1"
   },
