--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mysql2": "^3.1.0",
     "node": "^19.8.1",
+    "redis": "^4.6.6",
     "serve-favicon": "^2.5.0",
     "socket.io": "^4.6.1"
   },
