--- a/.env
+++ b/.env
@@ -3,7 +3,10 @@ HTTP_SERVER_PORT=80
 HTTP_SESSION_SECRET="change me!"
 
 # databases
-MYSQL_URL="mysql://root:zaq1@WSX@localhost:3306/generic-chat-app"
+MYSQL_URL="localhost"
+MYSQL_USER="root"
+MYSQL_PWD="zaq1@WSX"
+MYSQL_DB="generic-chat-app"
 REDIS_URL="localhost"
 REDIS_PORT="6379"
 REDIS_VALUE_PREFIX="gca:"
