--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "genericchatapp",
+  "name": "generic-chat-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "start-dev": "nodemon app.js"
+    "start-dev": "nodemon app.js",
+    "test": "mocha"
   },
   "author": "Piotr Kmieć",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.7",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "mocha": "^10.2.0",
     "mysql2": "^3.1.0",
     "node": "^19.8.1",
     "redis": "^4.6.6",
