implemented donate button with Stripe

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # HTTP/WS server
 HTTP_SERVER_PORT=80
 HTTP_SESSION_SECRET="change me!"
+PUBLIC_URL="http://localhost"
 
 # databases
 MYSQL_URL="localhost"
@@ -10,6 +11,10 @@ MYSQL_DB="generic-chat-app"
 REDIS_URL="localhost"
 REDIS_PORT="6379"
 REDIS_VALUE_PREFIX="gca:"
+
+# payments
+STRIPE_KEY_PRIVATE="generate details in your Stripe account dashboard"
+STRIPE_DONATION_PRODUCT_ID="as above"
 
 # other presets
 LIMIT_COOKIES_TO_HTTPS="false"
