--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ MYSQL_URL="localhost"
 MYSQL_USER="root"
 MYSQL_PWD="zaq1@WSX"
 MYSQL_DB="generic-chat-app"
+MYSQL_RETRY="false" # makes the app keep retrying db connection
 REDIS_URL="localhost"
 REDIS_PORT="6379"
 REDIS_VALUE_PREFIX="gca:"
